--- a/Policy Gradients.ipynb
+++ b/Policy Gradients.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########################\n",
+      "logging outputs to  test\n",
+      "########################\n",
+      "Using CPU for this assignment. There may be some bugs with using GPU that cause test cases to not match. You can uncomment the code below if you want to try using it.\n",
+      "CartPole-v0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_of_discounted_returns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     11\u001b[0m rewards \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mnormal(size\u001b[38;5;241m=\u001b[39mT)\n\u001b[0;32m---> 12\u001b[0m discounted_returns \u001b[38;5;241m=\u001b[39m \u001b[43mpgagent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_discounted_return\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrewards\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m expected_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6.49674307\u001b[39m\n\u001b[1;32m     15\u001b[0m return_error \u001b[38;5;241m=\u001b[39m rel_error(discounted_returns, expected_return)\n",
+      "File \u001b[0;32m~/hw4_student/deeprl/agents/pg_agent.py:137\u001b[0m, in \u001b[0;36mPGAgent._discounted_return\u001b[0;34m(self, rewards)\u001b[0m\n\u001b[1;32m    133\u001b[0m discounted_returns \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    134\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[38;5;124;03mEND CODE\u001b[39;00m\n\u001b[1;32m    136\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 137\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlist_of_discounted_returns\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'list_of_discounted_returns' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### Test return computation\n",
     "pg_args = dict(pg_base_args_dict)\n",
@@ -517,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "hw4",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
