refactor PGAgent class for improved readability and consistency; update comments and formatting

--- a/Policy Gradients.ipynb
+++ b/Policy Gradients.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,19 +127,8 @@
       "logging outputs to  test\n",
       "########################\n",
       "Using CPU for this assignment. There may be some bugs with using GPU that cause test cases to not match. You can uncomment the code below if you want to try using it.\n",
-      "CartPole-v0\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'list_of_discounted_returns' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     11\u001b[0m rewards \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mnormal(size\u001b[38;5;241m=\u001b[39mT)\n\u001b[0;32m---> 12\u001b[0m discounted_returns \u001b[38;5;241m=\u001b[39m \u001b[43mpgagent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_discounted_return\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrewards\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m expected_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6.49674307\u001b[39m\n\u001b[1;32m     15\u001b[0m return_error \u001b[38;5;241m=\u001b[39m rel_error(discounted_returns, expected_return)\n",
-      "File \u001b[0;32m~/hw4_student/deeprl/agents/pg_agent.py:137\u001b[0m, in \u001b[0;36mPGAgent._discounted_return\u001b[0;34m(self, rewards)\u001b[0m\n\u001b[1;32m    133\u001b[0m discounted_returns \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    134\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[38;5;124;03mEND CODE\u001b[39;00m\n\u001b[1;32m    136\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 137\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlist_of_discounted_returns\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'list_of_discounted_returns' is not defined"
+      "CartPole-v0\n",
+      "Error in return estimate is 1.3988379013203016e-10\n"
      ]
     }
    ],
@@ -171,9 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########################\n",
+      "logging outputs to  test\n",
+      "########################\n",
+      "Using CPU for this assignment. There may be some bugs with using GPU that cause test cases to not match. You can uncomment the code below if you want to try using it.\n",
+      "CartPole-v0\n",
+      "Error in return estimate is 1.0143652172567337e-08\n"
+     ]
+    }
+   ],
    "source": [
     "### Test reward to go computations\n",
     "pg_args = dict(pg_base_args_dict)\n",
@@ -203,9 +205,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight before update [[-0.00432252  0.30971584 -0.47518533]\n",
+      " [-0.4248946  -0.22236897  0.15482073]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'backward'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeight before update\u001b[39m\u001b[38;5;124m\"\u001b[39m, first_weight_before)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m---> 23\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mpolicy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43macts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43madvs\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining Loss\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[1;32m     26\u001b[0m expected_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m6142.9116\u001b[39m\n",
+      "File \u001b[0;32m~/hw4_student/deeprl/policies/MLP_policy.py:175\u001b[0m, in \u001b[0;36mMLPPolicyPG.update\u001b[0;34m(self, observations, acs_na, adv_n, acs_labels_na, qvals)\u001b[0m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;124;03mEND CODE\u001b[39;00m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m--> 175\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m()\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnn_baseline:\n\u001b[1;32m    179\u001b[0m     \u001b[38;5;66;03m# first standardize qvals to make this easier to train\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'backward'"
+     ]
+    }
+   ],
    "source": [
     "### Test policy gradient (check gradients match what we expect)\n",
     "torch.manual_seed(0)\n",
