remove unused event files and __pycache__ directories; update execution counts in DQN notebook

--- a/DQN.ipynb
+++ b/DQN.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +117,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########################\n",
+      "logging outputs to  test\n",
+      "########################\n",
+      "Using CPU for this assignment. There may be some bugs with using GPU that cause test cases to not match. You can uncomment the code below if you want to try using it.\n",
+      "LunarLander-v3\n",
+      "Weight before update (first row) [ 0.07646339 -0.07932477  0.09140956 -0.01702595  0.1423959   0.07935759\n",
+      " -0.03831156 -0.2694876   0.0761048 ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/envs/hw4/lib/python3.8/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n",
+      "/usr/local/envs/hw4/lib/python3.8/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Environment '<class 'deeprl.envs.box2d.lunar_lander.LunarLander'>' has deprecated methods '_step' and '_reset' rather than 'step' and 'reset'. Compatibility code invoked. Set _gym_disable_underscore_compat = True to disable this behavior.\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 27\u001b[0m\n\u001b[1;32m     23\u001b[0m first_weight_before \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(ptu\u001b[38;5;241m.\u001b[39mto_numpy(\u001b[38;5;28mnext\u001b[39m(critic\u001b[38;5;241m.\u001b[39mq_net\u001b[38;5;241m.\u001b[39mparameters())))\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeight before update (first row)\u001b[39m\u001b[38;5;124m\"\u001b[39m, first_weight_before[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m---> 27\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mcritic\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43macts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnext_obs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrewards\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mterminals\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining Loss\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     28\u001b[0m expected_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.9408444\u001b[39m\n\u001b[1;32m     29\u001b[0m loss_error \u001b[38;5;241m=\u001b[39m rel_error(loss, expected_loss)\n",
+      "File \u001b[0;32m~/hw4_student/deeprl/critics/dqn_critic.py:98\u001b[0m, in \u001b[0;36mDQNCritic.update\u001b[0;34m(self, ob_no, ac_na, next_ob_no, reward_n, terminal_n)\u001b[0m\n\u001b[1;32m     93\u001b[0m target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;124;03mEND CODE\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m---> 98\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m q_t_values\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m \u001b[43mtarget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\n\u001b[1;32m     99\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss(q_t_values, target)\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# Updates Q function to minimize bellman error\u001b[39;00m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;66;03m# Includes gradient clipping for stability\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
    "source": [
     "#### Test DQN updates\n",
     "dqn_args = dict(dqn_base_args_dict)\n",
